pr-summary/stdlib-explicit-null/tests/explicit-nulls/neg/i7883.check
8 |      case r(hd, tl) => Some((hd, tl))  // error // error // error
  |           ^
  |           None of the overloaded alternatives of method unapplySeq in class Regex with types
<<<<<<< OLD
  |            (m: scala.util.matching.Regex.Match): Option[List[String]]
=======
  |            (m: scala.util.matching.Regex.Match): Option[List[String | Null]]
>>>>>>> NEW
  |            (c: Char): Option[List[Char]]
<<<<<<< OLD
  |            (s: CharSequence): Option[List[String]]
=======
  |            (s: CharSequence): Option[List[String | Null]]
>>>>>>> NEW
  |           match arguments (String | Null)
-- [E006] Not Found Error: tests/explicit-nulls/neg/i7883.scala:8:30 ---------------------------------------------------
8 |      case r(hd, tl) => Some((hd, tl))  // error // error // error